-Minimal test config for YAMCS server dummy