@@ -4,14 +4,17 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
 import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.yamcs.YConfiguration;
+import org.yamcs.YamcsServer;
 import org.yamcs.client.ClientException;
 import org.yamcs.client.ConnectionListener;
 import org.yamcs.client.YamcsClient;
@@ -21,10 +24,15 @@ import org.yamcs.parameter.ParameterValue;
 import org.yamcs.protobuf.Pvalue.AcquisitionStatus;
 import org.yamcs.protobuf.Yamcs.NamedObjectId;
 import org.yamcs.tctm.AbstractTcDataLink;
+import org.yamcs.tctm.Link.Status;
 import org.yamcs.tctm.ParameterDataLink;
 import org.yamcs.tctm.ParameterSink;
 import org.yamcs.tctm.TmPacketDataLink;
 import org.yamcs.tctm.TmSink;
+import org.yamcs.tests.AbstractIntegrationTest.PacketProvider;
+import org.yamcs.tests.AbstractIntegrationTest.ParameterProvider;
+import org.yamcs.tests.AbstractIntegrationTest.TcDataLink;
+import org.yamcs.tests.RefMdbPacketGenerator;
 import org.yamcs.utils.FileUtils;
 import org.yamcs.utils.TimeEncoding;
 import org.yamcs.utils.ValueUtility;
@@ -38,8 +46,8 @@ import org.yamcs.xtce.XtceDb;
 public abstract class AbstractIntegrationTest {
 
   protected final String yamcsHost = "localhost";
-  protected static int yamcsPort = 9190;
-  protected static String yamcsInstance = "IntegrationTest";
+  protected final int yamcsPort = 9190;
+  protected final String yamcsInstance = "IntegrationTest";
 
   ParameterProvider parameterProvider;
   MyConnectionListener connectionListener;
@@ -49,44 +57,31 @@ public abstract class AbstractIntegrationTest {
   protected char[] adminPassword = "rootpassword".toCharArray();
   RefMdbPacketGenerator packetGenerator; // sends data to tm_realtime
   RefMdbPacketGenerator packetGenerator2; // sends data to tm2_realtime
-  protected static org.yamcs.YamcsServer yamcs;
+  static YamcsServer yamcs;
 
   static {
     // LoggingUtils.enableLogging();
   }
 
-  /**
-   * Add @BeforeAll to subclasses
-   *
-   * @throws Exception
-   */
+  @BeforeAll
   public static void beforeClass() throws Exception {
-    System.out.println("beforeClass*********");
     setupYamcs();
   }
 
-  /**
-   * Add @BeforeEach to subclasses
-   *
-   * @throws ClientException
-   */
+  @BeforeEach
   public void before() throws ClientException {
     parameterProvider = ParameterProvider.instance[0];
     assertNotNull(parameterProvider);
 
     connectionListener = new MyConnectionListener();
-
     yamcsClient = YamcsClient.newBuilder(yamcsHost, yamcsPort).withUserAgent("it-junit").build();
-
     yamcsClient.addConnectionListener(connectionListener);
-
-    if (!yamcs.getSecurityStore().getGuestUser().isActive()) {
+    if (yamcs.getSecurityStore().isEnabled()) {
       yamcsClient.login(adminUsername, adminPassword);
     }
-
     yamcsClient.connectWebSocket();
 
-    packetGenerator = AbstractIntegrationTest.PacketProvider.instance[0].mdbPacketGenerator;
+    packetGenerator = PacketProvider.instance[0].mdbPacketGenerator;
     packetGenerator.setGenerationTime(TimeEncoding.INVALID_INSTANT);
     packetGenerator2 = PacketProvider.instance[1].mdbPacketGenerator;
     packetGenerator2.setGenerationTime(TimeEncoding.INVALID_INSTANT);
@@ -99,22 +94,18 @@ public abstract class AbstractIntegrationTest {
         .clearAll();
   }
 
-  public static void setupYamcs() throws Exception {
-    Path dataDir = Paths.get("/tmp/yamcs-IntegrationTest-data");
+  protected static void setupYamcs() throws Exception {
+    Path dataDir = Path.of(System.getProperty("java.io.tmpdir"), "yamcs-IntegrationTest-data");
     FileUtils.deleteRecursivelyIfExists(dataDir);
-    System.out.println("setupYamcs*************8");
+
     YConfiguration.setupTest("IntegrationTest");
 
-    yamcs = org.yamcs.YamcsServer.getServer();
+    yamcs = YamcsServer.getServer();
     yamcs.prepareStart();
     yamcs.start();
   }
 
-  /**
-   * Add @AfterEach to subclasses
-   *
-   * @throws ClientException
-   */
+  @AfterEach
   public void after() throws InterruptedException {
     yamcsClient.close();
     assertTrue(connectionListener.onDisconnect.tryAcquire(5, TimeUnit.SECONDS));
@@ -122,7 +113,7 @@ public abstract class AbstractIntegrationTest {
 
   @AfterAll
   public static void shutDownYamcs() throws Exception {
-    org.yamcs.YamcsServer.getServer().shutDown();
+    YamcsServer.getServer().shutDown();
   }
 
   void generatePkt13AndPps(String utcStart, int numPackets) {
@@ -166,6 +157,17 @@ public abstract class AbstractIntegrationTest {
     }
   }
 
+  void generatePkt13AndTm2Pkt1(String utcStart, int numPackets) {
+    long t0 = TimeEncoding.parse(utcStart);
+    for (int i = 0; i < numPackets; i++) {
+      packetGenerator.setGenerationTime(t0 + 1000 * i);
+      packetGenerator.generate_PKT13();
+
+      packetGenerator2.setGenerationTime(t0 + 1000 * i);
+      packetGenerator2.generate_TM2_PKT1();
+    }
+  }
+
   static class MyConnectionListener implements ConnectionListener {
     Semaphore onConnect = new Semaphore(0);
     Semaphore onDisconnect = new Semaphore(0);
@@ -179,14 +181,11 @@ public abstract class AbstractIntegrationTest {
     }
 
     @Override
-    public void disconnected() {
-      onDisconnect.release();
-    }
+    public void connectionFailed(Throwable cause) {}
 
     @Override
-    public void connectionFailed(Throwable cause) {
-      // TODO Auto-generated method stub
-
+    public void disconnected() {
+      onDisconnect.release();
     }
   }
 
@@ -196,10 +195,11 @@ public abstract class AbstractIntegrationTest {
     YConfiguration config;
     String name;
 
-    public PacketProvider(String yinstance, String name, YConfiguration args) {
-      instance[args.getInt("num", 0)] = this;
-      this.config = args;
-      this.name = name;
+    @Override
+    public void init(String yamcsInstance, String linkName, YConfiguration config) {
+      instance[config.getInt("num", 0)] = this;
+      this.config = config;
+      this.name = linkName;
     }
 
     @Override
@@ -263,11 +263,12 @@ public abstract class AbstractIntegrationTest {
 
     String name;
 
-    public ParameterProvider(String yamcsInstance, String name, YConfiguration config) {
+    @Override
+    public void init(String yamcsInstance, String linkName, YConfiguration config) {
       instance[config.getInt("num", 0)] = this;
       xtcedb = XtceDbFactory.getInstance(yamcsInstance);
       this.config = config;
-      this.name = name;
+      this.name = linkName;
     }
 
     @Override
@@ -388,7 +389,6 @@ public abstract class AbstractIntegrationTest {
         commandHistoryPublisher.publish(preparedCommand.getCommandId(), "packetSeqNum", seqNum);
       }
       commands.add(preparedCommand);
-
       return true;
     }
 
